[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-systemcoupling-core"
version = "0.13.dev0"
description = "A Python wrapper for Ansys System Coupling."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]
dependencies = [
    "ansys-api-systemcoupling==0.3.1",
    "ansys-platform-instancemanagement~=1.0",
    "ansys-tools-common>=0.4.3",
    "grpcio>=1.30.0",
    "grpcio-status>=1.30.0",
    "googleapis-common-protos>=1.50.0",
    "psutil>=5.7.0",
    "pyyaml",
    "appdirs>=1.4.0",
    "importlib-metadata>=4.0",
    "matplotlib>=3.8.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
build = [
	"build",
]
classesgen = [
	# Dependencies for API class generation from System Coupling metadata

	# NB
	# black and isort are called programmatically to keep generated code
	# consistent with style elsewhere. We need to keep these versions in
	# sync with the precommit dependencies.
	"black==26.3.1",
	"isort==8.0.1",
]
doc = [
	"ansys-sphinx-theme==1.7.2",
	"jupyter_sphinx==0.5.3",
	"matplotlib",
	"numpydoc==1.10.0",
	"pypandoc==1.17",
	"pytest-sphinx==0.7.1",
	"sphinx>=8.1.3,<9.0.0",
	"sphinx-autobuild==2024.10.3",
	"sphinx-autodoc-typehints==3.1.0",
	"sphinx-copybutton==0.5.2",
	"sphinx-design==0.6.1",
	"sphinx-gallery==0.20.0",
	"sphinx-notfound-page==1.1.0",
	"sphinxcontrib-websupport==2.0.0",
	"sphinxemoji==0.3.2",

	# pyansys dependencies for sphinx gallery examples
	"ansys-fluent-core==0.35.0",
	#   Explicit units dependency is to fix fluent runtime error
	#   TODO: try removing sometime - perhaps on next update
	#         of ansys-fluent-core
	"ansys-units==0.11.0",
	"ansys-mapdl-core==0.72.1",
]
style = [
	# NB: ensure these remain synced with .pre-commit-config.yaml
	"codespell==2.4.2",
	"flake8==7.3.0",
]
tests = [
	"pytest",
	"pytest-cov",
	"psutil>=5.7.0",
]

[tool.flit.module]
name = "ansys.systemcoupling.core"

[project.urls]
Source = "https://github.com/ansys/pysystem-coupling/"
Homepage = "https://github.com/ansys/pysystem-coupling/"
Documentation = "https://systemcoupling.docs.pyansys.com/"
Tracker = "https://github.com/ansys/pysystem-coupling/issues"

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
skip_glob = ["*__init__.py"]
filter_files = "true"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
omit = [
    "*/adaptor/api/*",
]

[tool.towncrier]
package = "ansys.systemcoupling.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pysystem-coupling/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pysystem-coupling/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
